syntax = "proto3";

option java_multiple_files = true;
option java_package = "<%=packageName%>.grpc.entity.<%=entityUnderscoredName%>";
//option java_outer_classname = "";

package <%=packageName%>.entity;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "util/date.proto";
import "util/decimal.proto";

service <%=entityClass%>Service {
    rpc Create<%=entityClass%> (<%=entityClass%>Proto) returns (<%=entityClass%>Proto);
    rpc Update<%=entityClass%> (<%=entityClass%>Proto) returns (<%=entityClass%>Proto);
    rpc GetAll<%=entityClassPlural%> (google.protobuf.Empty) returns (stream <%=entityClass%>Proto);
    rpc Get<%=entityClass%> (google.protobuf.Int64Value) returns (<%=entityClass%>Proto);
    rpc Delete<%=entityClass%> (google.protobuf.Int64Value) returns (google.protobuf.Empty);
}

<%_ for (field of fields) {
    if (field.fieldIsEnum) {
        let enumValues = field.fieldValues.split(',');_%>
enum <%=field.fieldType %>Proto {
        <%_ for (let idx in enumValues) { _%>
    <%= enumValues[idx].trim() %> = <%= idx %>;
        <%_ } _%>
}
     <%_ } _%>
<%_ } _%>

message <%=entityClass%>Proto {
    oneof id_oneof { uint64 id = 1; }
<%_ for (idx in fields) {
    var isOneOf = false;
    var fieldValidate = fields[idx].fieldValidate;
    var fieldValidateRules = fields[idx].fieldValidateRules;
    var fieldValidateRulesMaxlength = fields[idx].fieldValidateRulesMaxlength;
    var fieldType = fields[idx].fieldProtobufType;
    var isProtobufCustomType = fields[idx].isProtobufCustomType;
    var fieldName = fields[idx].fieldName;
    var fieldNameUnderscored = fields[idx].fieldNameUnderscored;
    if (!isProtobufCustomType && !(fieldValidate && fieldValidateRules.indexOf('required') != -1)) {
        isOneOf = true;
    }_%>
    <% if (isOneOf) { %>oneof <%=fieldNameUnderscored%>_oneof { <% } %><%=fieldType%> <%=fieldNameUnderscored%> = <%=parseInt(idx) +2%>;<% if (isOneOf) { %> }<% } %>
<%_ } _%>
}
